# Aether

./: CMakeLists.txt  README.md
examples/: basic.cpp
src/: CMakeLists.txt  errors.hpp  main.cpp
src/network/: router.cpp  server.cpp  session.cpp
src/network/include/: router.hpp  server.hpp  session.hpp
src/parsing/: parser.cpp
src/parsing/include/: http_types.hpp  parser.hpp
tests/: CMakeLists.txt  test_parser.cpp  test_router.cpp
